<resources>
    <string name="app_name">CatMemeGenerator</string>
    <string name="enter_text">Enter text to display on image</string>
    <string name="enter_text_color">Enter text color</string>
    <string name="enter_color_here">Enter Color Here</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="enter_text_size">Enter Text Size(sp)</string>
    <string name="enter_size_here">Enter Size Here</string>
    <string name="image">Image</string>
    <string name="gif">Gif</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="filter">Filter</string>
    <string name="reset_button">Reset</string>
    <string name="get_cat">Get Cat</string>

    <string-array name="filters_array">
        <item>blur</item>
        <item>mono</item>
        <item>sepia</item>
        <item>negative</item>
        <item>paint</item>
        <item>pixel</item>
    </string-array>

</resources>


