<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    tools:context=".ui.view.CatMemeFilterFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_text"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_enter_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_text_size"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enter_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_enter_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_size"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_size_here"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_text_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_enter_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_enter_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_color"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_color_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent "
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_gif_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_enter_color"
        android:checkedButton="@id/rb_image">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/image"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/gif"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_filter"

        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gif_image">

        <AutoCompleteTextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_filter">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_cat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>